fix: hidden scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,3 +17,13 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
